--- a/NavBarCool/index.html
+++ b/NavBarCool/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li> <a href="#">HOME </a> </li>
-                <li><a href="#"> PRICING</a>  </li>
+                <li id="price"><a href="#" > PRICING</a>  </li>
                 <li> <a href="#"> ABOUT US</a> </li>
                 <li> <a href="#"> SERVICES</a> </li>
             </ul>
